--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: ruby
 rvm:
   - 2.1.0
 before_script:
-  - psql -c 'create database spotlist2_test;' -U postgres
+  - psql -c 'create database CloudConsole_test;' -U postgres
