--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 rvm:
   - 2.1.0
+addons:
+  postgresql: "9.3"
 before_script:
   - psql -c 'create database CloudConsole_test;' -U postgres
