--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: CloudConsole_development
+  database: punch_in_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: CloudConsole
+  #username: punch_in
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: CloudConsole_test
+  database: punch_in_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: CloudConsole_production
-  username: CloudConsole
-  password: <%= ENV['CLOUDCONSOLE_DATABASE_PASSWORD'] %>
+  database: punch_in_production
+  username: punch_in
+  password: <%= ENV['punch_in_DATABASE_PASSWORD'] %>
